--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 Unidecode==0.04.14
+beautifulsoup4==4.3.2
 blinker==1.3
 docutils==0.11
 feedgenerator==1.7
